--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -13,12 +13,12 @@
         />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/iconlogo"
         android:layout_marginTop="30dp"
-        android:hint="Username"
+        android:hint="Email"
         android:paddingLeft="10dp"
         android:paddingTop="15dp" />
 
@@ -26,7 +26,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/username"
+        android:layout_below="@+id/email"
         android:layout_marginTop="27dp"
         android:hint="Password"
         android:paddingLeft="10dp"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OR"
-        android:textColor="@color/Black"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:layout_below="@+id/signinbtn"
         android:layout_marginTop="40dp"
@@ -59,6 +59,18 @@
         android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create Account"
+        android:textAlignment="center"
+        android:gravity="center_horizontal"
+        android:textColor="@color/colorAccent"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/create"
+        android:layout_centerHorizontal="true"
+        />
+
 
     <View
         android:id="@+id/divider2"
@@ -66,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_below="@id/signinbtn"
-        android:background="@color/DarkGrey"
+        android:background="@color/darkGrey"
         />
 
 
