--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="DarkGrey">#A9A9A9</color>
-    <color name="Black">#000</color>
+    <color name="darkGrey">#A9A9A9</color>
+    <color name="white">#fff</color>
+    <color name="black">#000</color>
 
 </resources>
